Fix cfg exceptions around empty statement lists